# OMNIAMIND

./: .gitignore  .zenodo.json  CITATION.cff  FIRST_EXPERIMENT_PATH.md  LICENSE  MANIFEST.md  OMNIAMIND.md  README.md  STATUS.md  TOTALITY-FIELD.md  capture_001.sh  ecosystem_manifest.json  gitignore  omniamind_primes.py  proxy_variant_runner.py  pyproject.toml  pytest.ini  report_generator.py  result_schema.py  synthetic_proxy_runner.py  variant_report_generator.py
benchmarks/: he_lwe_demo.py  omniamind_hallucination_probe.py  omniamind_primes_scan.py  omniamind_rsa_weighted.py
docs/: ACCESS_LEVELS.md  ACTIVE_CLAIM_MICRO_FIX_REPORT.json  ACTIVE_CLAIM_MICRO_FIX_REPORT.md  ARCHITECTURE.md  BACKBONE_CI_REPAIR_REPORT.md  BACKBONE_COMPLIANCE.md  BOUNDARIES.md  BOUNDARY.md  CI_FINAL_COLLECTION_FIX_REPORT.md  COGNITION_WORKFLOW_CONTRACT.md  CORE_PHENOMENA.md  DOI_REGISTRY.md  ECOSYSTEM_ROLE.md  FIRST_BACKEND_CHECKLIST.md  FIRST_BACKEND_TARGET.md  FIRST_EXPERIMENT_PATH.md  FIRST_PROXIES.md  MEASUREMENT_SKETCH.md  NOT_CONSCIOUSNESS_NOT_DECISION.md  OMNIAMIND_FOUNDATION.md  OMNIAMIND_MANIFEST.json  OMNIAMIND_PUBLIC_POSITION.md  ONLINE_CI_REPAIR_REPORT.md  ORCHESTRATION_OVERVIEW.md  PRODUCTION_READINESS.md  PROXY_FORMALIZATION_v0.md  QUICKSTART_OMNIAMIND.md  REPOSITORY_STATUS.md  SECOND_PASS_ONLINE_CI_REPAIR_REPORT.md  STRUCTURAL_OBSERVABILITY_ROLE.md  VALIDATION_NOTE.md  synthetic_proxy_runner.py
examples/: minimal_pipeline.py  minimal_pipeline_output.md  omniamind_minimal_workflow.json  safe_orchestration_trace.jsonl  sample_orchestration_trace.jsonl
omniamind/: __init__.py  (+1 more)
(+20 files in other folders)
