[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omniamind"
version = "0.1.0"
description = "Backbone-compliant orchestration layer for the OMNIA ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["omniamind*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[project.scripts]
omniamind-orchestrate-audit = "omniamind_orchestrator.cli:main"
